Add README.md, Cleanup